crates/aura-macros/tests/boundaries/actor_owned_forbidden_field.stderr
error: actor_owned structs may not embed move-owned handoff or terminal-publication primitives directly
  --> tests/boundaries/actor_owned_forbidden_field.rs:19:16
   |
19 |     operation: OperationContext<FakeOperationId, FakeOperationInstanceId, FakeTraceContext>,
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `aura_core::OperationContext`
 --> tests/boundaries/actor_owned_forbidden_field.rs:1:5
  |
1 | use aura_core::OperationContext;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
